--- a/Conferences/index.html
+++ b/Conferences/index.html
@@ -12,8 +12,8 @@
 
   <meta property="og:title" content="PRISM 2016" />
   <meta property="og:type" content="book" />
-  <meta property="og:url" content="https://shanmdphd.github.io/Conferences/" />
-  <meta property="og:image" content="https://shanmdphd.github.io/Conferences/images/cover.png" />
+  <meta property="og:url" content="https://shanmdphd.github.io/ConferenceBook/" />
+  <meta property="og:image" content="https://shanmdphd.github.io/ConferenceBook/images/cover.png" />
   <meta property="og:description" content="A guide to authoring books with R Markdown, including how to generate figures and tables, and insert cross-references, citations, HTML widgets, and Shiny apps in R Markdown. The book can be exported to HTML, PDF, and e-books (e.g. EPUB). The book style is customizable. You can easily write and preview the book in RStudio IDE or other editors, and host the book wherever you want (e.g. bookdown.org)." />
   <meta name="github-repo" content="shanmdphd/PAPER" />
 
@@ -21,7 +21,7 @@
   <meta name="twitter:title" content="PRISM 2016" />
   
   <meta name="twitter:description" content="A guide to authoring books with R Markdown, including how to generate figures and tables, and insert cross-references, citations, HTML widgets, and Shiny apps in R Markdown. The book can be exported to HTML, PDF, and e-books (e.g. EPUB). The book style is customizable. You can easily write and preview the book in RStudio IDE or other editors, and host the book wherever you want (e.g. bookdown.org)." />
-  <meta name="twitter:image" content="https://shanmdphd.github.io/Conferences/images/cover.png" />
+  <meta name="twitter:image" content="https://shanmdphd.github.io/ConferenceBook/images/cover.png" />
 
 <meta name="author" content="Sungpil Han">
 
@@ -119,7 +119,7 @@ code > span.in { color: #60a0b0; font-weight: bold; font-style: italic; } /* Inf
 </ul></li>
 </ul></li>
 <li class="divider"></li>
-<li><a href="https://shanmdphd.github.io" target="blank">Back to shanmdphd.github.io</a></li>
+<li><a href="https://bookdown.org" target="blank">Published with bookdown</a></li>
 
 </ul>
 
@@ -179,7 +179,7 @@ gitbook.start({
 "size": 2
 },
 "edit": {
-"link": "https://github.com/shanmdphd/shanmdphd/edit/master/ConferencesSource/index.Rmd",
+"link": "https://github.com/rstudio/bookdown/edit/master/inst/examples/index.Rmd",
 "text": "Edit"
 },
 "download": ["bookdown.pdf", "bookdown.epub", "bookdown.mobi"],
