--- a/Conferences/prism-afternoon.html
+++ b/Conferences/prism-afternoon.html
@@ -119,7 +119,7 @@ code > span.in { color: #60a0b0; font-weight: bold; font-style: italic; } /* Inf
 </ul></li>
 </ul></li>
 <li class="divider"></li>
-<li><a href="https://shanmdphd.github.io" target="blank">Back to shanmdphd.github.io</a></li>
+<li><a href="http://shanmdphd.github.io">Back to shanmdphd.github.io</a></li>
 
 </ul>
 
