--- a/Conferences/index.html
+++ b/Conferences/index.html
@@ -118,6 +118,7 @@ code > span.in { color: #60a0b0; font-weight: bold; font-style: italic; } /* Inf
 <li class="chapter" data-level="1.2.5" data-path="prism-afternoon.html"><a href="prism-afternoon.html#pharmacometrics-in-dose-optimization"><i class="fa fa-check"></i><b>1.2.5</b> Pharmacometrics in Dose Optimization</a></li>
 </ul></li>
 </ul></li>
+<li class="chapter" data-level="2" data-path="now-lets-check-what-happens.html"><a href="now-lets-check-what-happens.html"><i class="fa fa-check"></i><b>2</b> Now let’s check what happens</a></li>
 <li class="divider"></li>
 <li><a href="http://shanmdphd.github.io">shanmdphd.github.io</a></li>
 
